# embeddings_similarity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  embeddings_graphs_1.py  embeddings_graphs_2.py  embeddings_st_bench_pca.py  embeddings_st_bench_umap.py  embeddings_st_bench_umap_compare_models.py  embeddings_st_bench_umap_compare_models_heatmap.py  embeddings_streamlit_1.py  embeddings_streamlit_2.py  embeddings_streamlit_3.py  embeddings_streamlit_4.py  embeddings_streamlit_5.py  main.py  pyproject.toml  requirements.txt  vectors_similarities.py
cli/: embeddings_graphs_pca.py
docs_samples/: doc1.txt  doc2.txt  doc3.txt
referentiels/: docs.py  models.py
uploaded_files/: doc4.txt  doc5.txt
